[project]
name = "litecli"
dynamic = ["version"]
description = "CLI for SQLite Databases with auto-completion and syntax highlighting."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD" }
authors = [{ name = "dbcli", email = "litecli-users@googlegroups.com" }]
urls = { "homepage" = "https://github.com/dbcli/litecli" }
dependencies = [
    "cli-helpers[styles]>=2.2.1",
    "click>=4.1,!=8.1.*",
    "configobj>=5.0.5",
    "mypy>=1.17.1",
    "prompt-toolkit>=3.0.3,<4.0.0",
    "pygments>=1.6",
    "sqlparse>=0.4.4",
    "setuptools",                   # Required by llm commands to install models
    "pip",
    "llm>=0.25.0",
]

[build-system]
requires = [
    "setuptools>=64.0",
    "setuptools-scm>=8;python_version>='3.8'",
    "setuptools-scm<8;python_version<'3.8'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.scripts]
litecli = "litecli.main:cli"

[project.optional-dependencies]
ai = ["llm"]
sqlean = ["sqlean-py>=3.47.0"]

dev = [
    "behave>=1.2.6",
    "coverage>=7.2.7",
    "pexpect>=4.9.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "tox>=4.8.0",
    "pdbpp>=0.10.3",
    "llm>=0.19.0",
]

[tool.setuptools.packages.find]
exclude = ["screenshots", "tests*"]

[tool.setuptools.package-data]
litecli = ["liteclirc", "AUTHORS"]

[tool.ruff]
line-length = 140

[tool.mypy]
pretty = true
strict_equality = true
ignore_missing_imports = true
warn_unreachable = true
warn_redundant_casts = true
warn_no_return = true
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true
warn_unused_ignores = true
python_version = "3.9"
# Resolve module discovery reliably
explicit_package_bases = true
packages = ["litecli"]
# Gradually tighten typing
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = [
    '^build/',
    '^dist/',
    '^\.tox/',
    '^\.venv/',
    '^venv/',
    '^\.mypy_cache/',
    '^\.pytest_cache/',
    '^\.ruff_cache/',
]
